<resources>
    <string name="app_name">AIRFLY</string>
    <string name="description">| fly to die |</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to login?</string>
    <string name="go_to_register">Go to register?</string>
    <string name="setting">setting</string>
    <string name="save">Save</string>
    <string name="select_theme">SELECT THEME</string>
    <string name="back">Back</string>
    <string name="choose_a_theme">CHOOSE A THEME</string>
    <string name="theme">THEME</string>
    <string name="account">ACCOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infomation">Infomation</string>
    <string name="logout">Logout</string>
    <string name="score">score</string>
</resources>