<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Fragment.SettingAccountFragment">

    <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_p"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/ic_airfly_background"
                            android:text="Name" />
                        <TextView
                            android:id="@+id/account_name"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_p"
                            android:textColor="#CDDC39"
                            android:text="Jone" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_p"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/ic_airfly_background"
                            android:text="@string/email" />
                        <TextView
                            android:id="@+id/account_email"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_p"
                            android:textColor="#CDDC39"
                            android:text="test@ledinhcuong.com" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_p"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/ic_airfly_background"
                            android:text="@string/phone" />
                        <TextView
                            android:id="@+id/account_phone"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_p"
                            android:textColor="#CDDC39"
                            android:text="+XXXXXXXXXXX" />
                </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            style="@style/text_button"
            android:text="@string/logout"
            android:textColor="#201817"
            android:paddingBottom="15dp"
            android:background="@drawable/button_light"
            android:shadowColor="#FF5722"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:textAllCaps="false"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

</LinearLayout>